test/compile_errors/err_expected_type.w
//! expect-check-fail: expected 'TypeOf' after '@' in type position
fn foo(x: @) -> i32:
    x
